open .blend file will be crash with blender 2.77a #48176

Closed
opened 2016-04-17 09:24:42 +02:00 by Leroy · 7 comments

System Information
windows 7 sp1 64bit

Blender Version
Broken: blender 2.77a abf6f08
Worked: (optional)

open the .blend file will be crash, I do not know what causes, and the .blend file is download from blendswap. I have tried on several computer with different windows system.

The file link : http://www.blendswap.com/blends/view/67739

Exact steps for others to reproduce the error
Just open it with blender 2.77a, than blender will be crash, but sometimes can open it in normal, and sometimes switch layer will be crash too, I don't know who causes, but if you delete the ground object than save it, it's will be work fine.

Thanks

**System Information** windows 7 sp1 64bit **Blender Version** Broken: blender 2.77a abf6f08 Worked: (optional) open the .blend file will be crash, I do not know what causes, and the .blend file is download from blendswap. I have tried on several computer with different windows system. The file link : http://www.blendswap.com/blends/view/67739 **Exact steps for others to reproduce the error** Just open it with blender 2.77a, than blender will be crash, but sometimes can open it in normal, and sometimes switch layer will be crash too, I don't know who causes, but if you delete the ground object than save it, it's will be work fine. Thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42
Sergey Sharybin was assigned by Campbell Barton 2016-04-17 21:55:56 +02:00

Confirmed, the issue is that 2+ shrinkwrap constraint are releasing the subsurf derived mesh, which frees temporary data.
However this happens without any locking, causing a double-free in own tests (target->release(target); at constraint.c:3526).

For now, if you want to use this file, you can run Blender with the -t 1 argument to disable multi-threading.

Assigning to @Sergey

Confirmed, the issue is that 2+ shrinkwrap constraint are releasing the subsurf derived mesh, which frees temporary data. However this happens without any locking, causing a double-free in own tests (`target->release(target);` at constraint.c:3526). For now, if you want to use this file, you can run Blender with the `-t 1` argument to disable multi-threading. Assigning to @Sergey

@ideasman42, i can't really reproduce the issue, so having some additional info would help.

But basically, from what i see. Shrinkwrap constraint only need DerivedMesh to construct BVHTree. BVHTree will create a copied of vert/loops/looptris arrays if those layers do not exist yet (meaning, no write to DM will happen). This means dm->release() is not really needed, and likely to be fully avoid, since currently it caused temporary layers to be freed. So in order to fix crash it should be enough to remove dm->release() call. This is in fact a correct thing to do.

However, temporary layers created in the DM by the DM users (not by DM itself) is a bug. This is because policy must be nobody can write to other's DM. So it's important to understand who writes to the DM. That's where some back traces form you might give some enlightenment.

So can you perhaps share some crash backtraces for further investigation?

@ideasman42, i can't really reproduce the issue, so having some additional info would help. But basically, from what i see. Shrinkwrap constraint only need DerivedMesh to construct BVHTree. BVHTree will create a copied of vert/loops/looptris arrays if those layers do not exist yet (meaning, no write to DM will happen). This means `dm->release()` is not really needed, and likely to be fully avoid, since currently it caused temporary layers to be freed. So in order to fix crash it should be enough to remove `dm->release()` call. This is in fact a correct thing to do. However, temporary layers created in the DM by the DM users (not by DM itself) is a bug. This is because policy must be `nobody can write to other's DM`. So it's important to understand who writes to the DM. That's where some back traces form you might give some enlightenment. So can you perhaps share some crash backtraces for further investigation?

This issue was referenced by 680b135ec1

This issue was referenced by 680b135ec1cf220c7ebd579b88bc5481fc379fc3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48176
No description provided.